fixed breakpoints for visibility mini classes updated tests for visibility classes updated docs for visibility classes

--- a/src/less/utility.less
+++ b/src/less/utility.less
@@ -423,46 +423,47 @@
 
 /*
  * Visibility
- * Avoids setting display to `block`
+ * Avoids setting display to `block` so it works also with `inline-block` and `table`
  */
-
 
 /* Desktop and bigger */
 @media (min-width: @breakpoint-large) {
 
+    .uk-visible-mini { display: none !important; }
     .uk-visible-small { display: none !important; }
     .uk-visible-medium { display: none !important; }
-    .uk-visible-mini { display: none !important; }
     .uk-hidden-large { display: none !important; }
 
 }
 
-/* Only tablets portrait */
+/* Tablets portrait */
 @media (min-width: @breakpoint-medium) and (max-width: @breakpoint-medium-max) {
 
+    .uk-visible-mini { display: none !important; }
     .uk-visible-small { display: none !important; }
     .uk-visible-large { display: none !important ; }
-    .uk-visible-mini { display: none !important; }
     .uk-hidden-medium { display: none !important; }
 
 }
 
 /* Phone landscape */
-@media (min-width: @breakpoint-mini-max) and (max-width: @breakpoint-small-max) {
+@media (min-width: @breakpoint-small) and (max-width: @breakpoint-small-max) {
 
+    .uk-visible-mini { display: none !important; }
     .uk-visible-medium { display: none !important; }
     .uk-visible-large { display: none !important; }
-    .uk-visible-mini { display: none !important; }
     .uk-hidden-small { display: none !important; }
 
 }
 
 /* Phones portrait and smaller */
 @media (max-width: @breakpoint-mini-max) {
+
+    .uk-visible-small { display: none !important; }
     .uk-visible-medium { display: none !important; }
     .uk-visible-large { display: none !important; }
-    .uk-visible-small { display: none !important; }
     .uk-hidden-mini { display: none !important; }
+
 }
 
 /* Remove from the flow and screen readers on any device */
